support-smi-language-code, implemented (#1760)